[package]
name = "perfect-map"
version = "0.1.0"
edition = "2021"


[dependencies]
ph = "0.6"
serde = { version = "1.0.164", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11.9", optional = true }


[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_bytes"]

[dev-dependencies]
serde_json = "1"
